# tar

./: .conan-profile-base  .conan-profile-debug  .conan-profile-release  .gitignore  CMakeLists.txt  README.md  TESTING.md  toolchainfile-amd64-clang20.cmake
.github/workflows/: build.yml  test-local.yml  test-simple.yml
examples/: CMakeLists.txt  README.md  basic_usage.cpp  debug_extract.cpp  debug_extract_v2.cpp  debug_extraction.cpp  debug_iteration.cpp  debug_large_entry.cpp  debug_padding.cpp  debug_skip_issue.cpp  debug_sparse.cpp  debug_sparse_1_0.cpp  debug_streaming_v2.cpp  debug_tar.cpp  extended_metadata_demo.cpp  extract_files.cpp  gnu_tar_demo.cpp  simple_count.cpp  sparse_demo.cpp  test_error.cpp  test_pax_parser.cpp  test_streaming_issue.cpp
include/tierone/tar/: archive_entry.hpp  archive_reader.hpp  error.hpp  gnu_tar.hpp  header_parser.hpp  metadata.hpp  pax_parser.hpp  sparse.hpp  sparse_reader.hpp  stream.hpp  tar.hpp
src/: archive_entry.cpp  archive_reader.cpp  gnu_tar.cpp  header_parser.cpp  pax_parser.cpp  sparse.cpp  stream.cpp  tar.cpp
tests/: .gitignore  CMakeLists.txt  README.md  test_archive_entry.cpp  test_archive_entry_extract.cpp  test_archive_reader.cpp  test_error_handling_integration.cpp  test_extended_metadata.cpp  test_gnu_tar.cpp  test_header_parser.cpp  test_header_parser_edge_cases.cpp  test_large_file_integration.cpp  test_pax_parser.cpp  test_sparse.cpp  test_stream.cpp  test_tar_api.cpp
tests/fixtures/: simple_sparse.tar
tests/scripts/: test_sparse_final.sh  test_sparse_real.sh
